--- a/shared/globals.css
+++ b/shared/globals.css
@@ -6,7 +6,8 @@
 @theme {
   --color-brand-primary: #16a34a;
   --color-brand-secondary: #22C55E;
-  --grid-cols-auto-fit-200: repeat(auto-fit, minmax(200px, 1fr))
+  --grid-cols-auto-fit-200: repeat(auto-fit, minmax(200px, 1fr));
+  --grid-cols-auto-fit-400: repeat(auto-fit, minmax(400px, 1fr))
 }
 
 .debug {
@@ -59,7 +60,8 @@
   --color-sidebar-accent: var(--sidebar-accent);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
-  --color-sidebar-ring: var(--sidebar-ring);}
+  --color-sidebar-ring: var(--sidebar-ring);
+}
 
 :root {
   --radius: 0.625rem;
@@ -93,7 +95,8 @@
   --sidebar-accent: oklch(0.97 0 0);
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);}
+  --sidebar-ring: oklch(0.708 0 0);
+}
 
 .dark {
   --background: oklch(0.145 0 0);
@@ -126,10 +129,15 @@
   --sidebar-accent: oklch(0.269 0 0);
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);}
+  --sidebar-ring: oklch(0.556 0 0);
+}
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;}
+    @apply border-border outline-ring/50;
+  }
+
   body {
-    @apply bg-background text-foreground;}}
+    @apply bg-background text-foreground;
+  }
+}
