--- a/shared/globals.css
+++ b/shared/globals.css
@@ -14,6 +14,14 @@
   border: 3px solid red
 }
 
+button {
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
 @layer components {
   .hero-diagonal {
     @media (min-width:1028px) {
